test/expected/k_explain_ai.out
explain int S[4]
            ^
13: error: "S": previously declared as type: typedef struct S S
